--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -17,7 +17,7 @@ jobs:
       uses: flutter/flutter@v2
       with:
         channel: 'stable' # or 'beta' or 'dev'     
-
+        flutter-version: '3.16.5'
     # - name: Setup Flutter
     #   uses: subosito/flutter-action@v2
     #   with:
