--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,3 +36,8 @@ jobs:
       - uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
         with: 
            min_coverage: 80         
+
+        #    - name: flutter-cli
+        #    # You may pin to the exact commit or the version.
+        #    # uses: steebchen/flutter@55019e0f56278a7c84949e8e17c66e8f79d67290
+        #    uses: steebchen/flutter@v1.1.0
