--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,13 +2,8 @@ name: CI/CD
 
 on: 
   push:
-    branches:
-      - develop
-      - master
-  pull_request:
-    branches:
-        - develop
-        - master
+    tags:
+      - v*
 jobs:
   flutter_test:
     name: Run Flutter analyze and test
