--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Generate APK
 on:
   push:
     branches:
-      - main  # Change this to your main branch name
+      - feature/configure-ci  # Change this to your main branch name
 
 jobs:
   build:
