--- a/.github/workflows/Babycode.yml
+++ b/.github/workflows/Babycode.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '2.x' # Change this to your Flutter version
+        flutter-version: '3.16.0' # Change this to your Flutter version
 
     - name: Get dependencies
       run: flutter pub get
