--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -29,7 +29,10 @@ jobs:
 
     - name: Build APK
       run: flutter build apk
-
+    - uses: actions/upload-artifact@v1
+      with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
   deploy:
     runs-on: ubuntu-latest
     needs: build
