--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Set Up Flutter
       uses: subosito/flutter-action@v2
       with:
-        # flutter-version: '3.2.3' # Set your desired Flutter version
-        # channel: 'stable' # or 'beta' or 'dev'     
-        flutter-version: '3.16.5'
+        flutter-version: '3.16.8' # Set your desired Flutter version
+        channel: 'stable' # or 'beta' or 'dev'     
+   #     flutter-version: '3.16.5'
     # - name: Setup Flutter
     #   uses: subosito/flutter-action@v2
     #   with:
