--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
+      with:
+        node-version: '20' # Update to Node.js 20
     - name: Set Up Flutter
       uses: subosito/flutter-action@v2
       with:
