--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -11,8 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
     - name: Checkout Repository
       uses: actions/checkout@v2
+      with:
+          node-version: '20'
+          
     - name: Use Node.js 20
       uses: actions/setup-node@v3
       with:
