--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -25,7 +25,7 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.16.8' # Set your desired Flutter version
-        channel: 'stable' # or 'beta' or 'dev'     
+        channel: 'beta' # or 'beta' or 'dev'     
    #     flutter-version: '3.16.5'
     # - name: Setup Flutter
     #   uses: subosito/flutter-action@v2
