--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -22,6 +22,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20' # Update to Node.js 20
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'zulu'
+        java-version: "12.x"
     - name: Set Up Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -37,11 +41,11 @@ jobs:
       run: flutter pub get
 
     - name: Build APK
-      run: flutter build apk
+      run: flutter build appbundle
     - uses: actions/upload-artifact@v1
       with:
           name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+          path: build/app/outputs/apk/release/app-release.aab
   deploy:
     runs-on: ubuntu-latest
     needs: build
