--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Set Up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.19.0-0.2.pre' # Set your desired Flutter version
-        channel: 'beta' # or 'beta' or 'dev'     
+        flutter-version: '3.16.8' # Set your desired Flutter version
+        channel: 'stable' # or 'beta' or 'dev'     
    #     flutter-version: '3.16.5'
     # - name: Setup Flutter
     #   uses: subosito/flutter-action@v2
@@ -44,7 +44,7 @@ jobs:
       run: flutter build appbundle
     - uses: actions/upload-artifact@v1
       with:
-          name: release-apk
+          name: release-aab
           path: build/app/outputs/apk/release/app-release.aab
   deploy:
     runs-on: ubuntu-latest
