--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -41,11 +41,11 @@ jobs:
       run: flutter pub get
 
     - name: Build APK
-      run: flutter build appbundle
+      run: flutter build apk
     - uses: actions/upload-artifact@v1
       with:
           name: release-aab
-          path: build/app/outputs/apk/release/app-release.aab
+          path: build/app/outputs/apk/release/app-release.apk
   deploy:
     runs-on: ubuntu-latest
     needs: build
