--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
   workflow_dispatch:
 
 jobs:
@@ -13,16 +12,21 @@ jobs:
     name: Create version number
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
           versionSpec: "5.x"
+
       - name: Use GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
+
       - name: Create version.txt with nuGetVersion
-        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
+        run: echo "${{ steps.gitversion.outputs.nuGetVersion }}" > version.txt
+
       - name: Upload version.txt
         uses: actions/upload-artifact@v2
         with:
@@ -34,48 +38,55 @@ jobs:
     needs: version
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Get version.txt
         uses: actions/download-artifact@v2
         with:
           name: gitversion
+
       - name: Create new file without newline char from version.txt
         run: tr -d '\n' < version.txt > version1.txt
+
       - name: Read version
         id: version
         uses: juliangruber/read-file-action@v1
         with:
           path: version1.txt
+
       - name: Update version in YAML
-        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+        run: sed -i "s/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g" pubspec.yaml
+
       - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.0.3
+        uses: dawidd6/action-download-artifact@v2
         with:
-          fileName: upload-keystore.jks
-          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+          name: upload-keystore.jks
+          path: android
+
       - name: Create key.properties
         run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+          echo "storeFile=android/upload-keystore.jks" > android/key.properties
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-      - uses: actions/setup-java@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          distribution: 'zulu'
-          java-version: "12.x"
-          cache: gradle
-      - uses: subosito/flutter-action@v2
+          distribution: 'adopt'
+          java-version: '12'
+
+      - name: Get Flutter SDK
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.0.0"
-          channel: 'stable'
-          cache: true
-      
+          flutter-version: "2.x" # Update to the desired Flutter version
+
       - name: Get dependencies
         run: flutter pub get
 
       - name: Start Android Release Build
-        run: flutter build appbundle
+        run: flutter build appbundle --release --build-number=${{ github.run_number }}
 
       - name: Upload Android Release
         uses: actions/upload-artifact@v2
@@ -88,16 +99,19 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Get Android Build from artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: android-release
-    - name: Release Build to internal track
-      uses: r0adkll/upload-google-play@v1
-      with:
-        serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_ACCOUNT_KEY }}
-        packageName: <YOUR_PACKAGE_NAME>
-        releaseFiles: app-release.aab
-        track: alpha
-        status: completed
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Get Android Build from artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: android-release
+
+      - name: Release Build to internal track
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.PLAYSTORE_ACCOUNT_KEY }}
+          packageName: <YOUR_PACKAGE_NAME>
+          releaseFiles: app-release.aab
+          track: alpha
+          status: completed
